# mansion_watch_scraper

./: .codecov.yml  .env.docker  .env.example  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README-job-trace.md  README.md  app.yaml  coverage.xml  docker-compose.yml  dummy-credentials.json  main.py  pyproject.toml  pytest.ini  requirements.txt  sample_scraper.py  scrapy.cfg  seed.py  seed.sh  setup.py
.cursor/rules/: analytics.mdc  code_review_general.mdc  pr_generation.mdc
.github/workflows/: config.yml
app/apis/: __init__.py  common_overviews.py  job_trace.py  messages.py  properties.py  property_overviews.py  scrape.py  users.py  webhooks.py
app/configs/: settings.py
app/db/: indexes.py  monitoring.py  session.py
app/models/: common_overview.py  id.py  job_status.py  message.py  property.py  property_image.py  property_overview.py  user.py  user_property.py
app/services/: date.py  utils.py  watchlist_service.py
dbs/: default.db  mansion_watch_scraper.db
docs/: how-to-check-logs-in-cloud-run.md  how-to-deploy-batch-job.md  how-to-deploy-gcloud-run.md  how-to-deploy-job-trace-server.md  how-to-publish-messages.md  how-to-test-scraper.md  how-to-use-scrapy-shell.md  how-to-use-scrapyd.md
eggs/mansion_watch_scraper/: 1736176412.egg
enums/: html_element_keys.py  keys.py
mansion_watch_scraper/: cloudbuild.yaml  items.py  middlewares.py  pipelines.py  requirements.txt  scrapy.cfg  settings.py
project.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  conftest.py
(+43 files in other folders)
