[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mansion_watch_scraper"
version = "1.0.0"
description = "A scraper for monitoring mansion listings"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "motor",
    "pymongo",
    "pydantic",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "pytest-mock",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=html --cov-report=xml --cov-fail-under=60"
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 88
skip-string-normalization = false
